fixed errors and contrast errors

--- a/lesson8/css/weather.css
+++ b/lesson8/css/weather.css
@@ -231,7 +231,7 @@ main figure.logo img {
     margin: 20px;
     margin-bottom: 0;
     padding: 20px;
-    background-color: rgb(235, 233, 233);
+    background-color: white;
     border-radius: 1%;
 }
 .normal-p{
